issue 90: Implemented cropping for images

--- a/jojo-app/src/pages/UpdateProfile/UpdateProfile.less
+++ b/jojo-app/src/pages/UpdateProfile/UpdateProfile.less
@@ -16,17 +16,11 @@
         display: flex;
         font-size: 35px;
         text-align: center;
+        margin-bottom: 20px;
 
         color: #222755;
     }
 
-    .square {
-        text-align: center;
-        margin-top: 5%;
-        width: 100%;
-        height: 85%;
-        color: bisque;
-    }
 
     .form-control {
         border-style: outset;
